cs335_project-main/parser.output
Grammar

    0 $accept: file_input $end

    1 file_input: file_input1 ENDMARKER

    2 file_input1: ε
    3            | file_input1 file_input2

    4 file_input2: stmt
    5            | NEWLINE

    6 funcdef: KEYWORD_DEF NAME parameters ':' suite
    7        | KEYWORD_DEF NAME parameters OP_ARROW test ':' suite

    8 parameters: '(' ')'
    9           | '(' typedargslist ')'

   10 typedargslist: tfpdef typedargslist1 typedargslist2 typedargslist3
   11              | '*' tfpdef typedargslist2 typedargslist5
   12              | '*' typedargslist2 typedargslist5
   13              | OP_POWER tfpdef
   14              | OP_POWER tfpdef ','

   15 typedargslist1: ε
   16               | '=' test

   17 typedargslist2: ε
   18               | typedargslist2 ',' tfpdef typedargslist1

   19 typedargslist3: ε
   20               | ',' typedargslist4

   21 typedargslist4: ε
   22               | '*' tfpdef typedargslist2 typedargslist5
   23               | '*' typedargslist2 typedargslist5
   24               | OP_POWER tfpdef
   25               | OP_POWER tfpdef ','

   26 typedargslist5: ε
   27               | ','
   28               | ',' OP_POWER tfpdef
   29               | ',' OP_POWER tfpdef ','

   30 tfpdef: NAME ':' test
   31       | NAME

   32 stmt: simple_stmt
   33     | compound_stmt

   34 simple_stmt: small_stmt simple_stmt2 ';' NEWLINE
   35            | small_stmt simple_stmt2 NEWLINE

   36 simple_stmt2: ε
   37             | simple_stmt2 ';' small_stmt

   38 small_stmt: expr_stmt
   39           | flow_stmt
   40           | global_stmt
   41           | nonlocal_stmt
   42           | assert_stmt

   43 expr_stmt: testlist_star_expr expr_stmt2

   44 expr_stmt2: annassign
   45           | augassign testlist
   46           | expr_stmt3

   47 expr_stmt3: ε
   48           | expr_stmt3 '=' testlist_star_expr

   49 annassign: ':' test '=' test
   50          | ':' test

   51 testlist_star_expr: test testlist_star_expr1
   52                   | test testlist_star_expr1 ','

   53 testlist_star_expr1: ε
   54                    | testlist_star_expr1 ',' test

   55 augassign: OP_PLUS_EQUALS
   56          | OP_MINUS_EQUALS
   57          | OP_MULTIPLY_EQUALS
   58          | OP_DIVIDE_EQUALS
   59          | OP_MOD_EQUALS
   60          | OP_AND_EQUALS
   61          | OP_OR_EQUALS
   62          | OP_XOR_EQUALS
   63          | OP_LEFT_SHIFT_EQUALS
   64          | OP_RIGHT_SHIFT_EQUALS
   65          | OP_POWER_EQUALS
   66          | OP_INT_DIVIDE_EQUALS

   67 flow_stmt: break_stmt
   68          | continue_stmt
   69          | return_stmt
   70          | raise_stmt

   71 break_stmt: KEYWORD_BREAK

   72 continue_stmt: KEYWORD_CONTINUE

   73 return_stmt: KEYWORD_RETURN
   74            | KEYWORD_RETURN testlist

   75 raise_stmt: KEYWORD_RAISE
   76           | KEYWORD_RAISE test
   77           | KEYWORD_RAISE test KEYWORD_FROM test

   78 global_stmt: KEYWORD_GLOBAL NAME global_stmt1

   79 global_stmt1: ε
   80             | global_stmt1 ',' NAME

   81 nonlocal_stmt: KEYWORD_NONLOCAL NAME nonlocal_stmt1

   82 nonlocal_stmt1: ε
   83               | nonlocal_stmt1 ',' NAME

   84 assert_stmt: KEYWORD_ASSERT test
   85            | KEYWORD_ASSERT test ',' test

   86 compound_stmt: if_stmt
   87              | while_stmt
   88              | for_stmt
   89              | funcdef
   90              | classdef

   91 if_stmt: KEYWORD_IF test ':' suite if_stmt1 if_stmt2

   92 if_stmt1: ε
   93         | if_stmt1 KEYWORD_ELIF test ':' suite

   94 if_stmt2: ε
   95         | KEYWORD_ELSE ':' suite

   96 while_stmt: KEYWORD_WHILE test ':' suite while_stmt1

   97 while_stmt1: ε
   98            | KEYWORD_ELSE ':' suite

   99 for_stmt: KEYWORD_FOR exprlist KEYWORD_IN testlist ':' suite for_stmt1

  100 for_stmt1: ε
  101          | KEYWORD_ELSE ':' suite

  102 suite: simple_stmt
  103      | NEWLINE INDENT suite1 DEDENT

  104 suite1: stmt
  105       | suite1 stmt

  106 test: or_test test1

  107 test1: ε
  108      | KEYWORD_IF or_test KEYWORD_ELSE test

  109 or_test: and_test or_test1

  110 or_test1: ε
  111         | or_test1 KEYWORD_OR and_test

  112 and_test: not_test and_test1

  113 and_test1: ε
  114          | and_test1 KEYWORD_AND not_test

  115 not_test: KEYWORD_NOT not_test
  116         | comparison

  117 comparison: expr comparison1

  118 comparison1: ε
  119            | comparison1 comp_op expr

  120 comp_op: '<'
  121        | '>'
  122        | OP_EQUALS
  123        | OP_GREATER_THAN_EQUALS
  124        | OP_LESS_THAN_EQUALS
  125        | OP_NOT_EQUALS

  126 expr: xor_expr expr1

  127 expr1: ε
  128      | expr1 '|' xor_expr

  129 xor_expr: and_expr xor_expr1

  130 xor_expr1: ε
  131          | xor_expr1 '^' and_expr

  132 and_expr: shift_expr and_expr1

  133 and_expr1: ε
  134          | and_expr1 '&' shift_expr

  135 shift_expr: arith_expr shift_expr1

  136 shift_expr1: ε
  137            | shift_expr1 shift_expr2 arith_expr

  138 shift_expr2: OP_LEFT_SHIFT
  139            | OP_RIGHT_SHIFT

  140 arith_expr: term arith_expr1

  141 arith_expr1: ε
  142            | arith_expr1 arith_expr2 term

  143 arith_expr2: '+'
  144            | '-'

  145 term: factor term1

  146 term1: ε
  147      | term1 term2 factor

  148 term2: '*'
  149      | '/'
  150      | '%'
  151      | OP_INT_DIVIDE

  152 factor: factor1 factor
  153       | power

  154 factor1: '+'
  155        | '-'
  156        | '~'

  157 power: atom_expr power1

  158 power1: ε
  159       | OP_POWER factor

  160 atom_expr: atom atom_expr1

  161 atom_expr1: ε
  162           | atom_expr1 trailer

  163 atom: '(' atom1 ')'
  164     | '[' atom1 ']'
  165     | NAME
  166     | NUMBER
  167     | atom2
  168     | KEYWORD_NONE
  169     | KEYWORD_TRUE
  170     | KEYWORD_FALSE

  171 atom1: ε
  172      | testlist_comp

  173 atom2: STRING
  174      | atom2 STRING

  175 testlist_comp: test testlist_comp2 ','
  176              | test testlist_comp2

  177 testlist_comp2: ε
  178               | testlist_comp2 ',' test

  179 trailer: '(' arglist ')'
  180        | '(' ')'
  181        | '[' subscriptlist ']'
  182        | '.' NAME

  183 subscriptlist: subscript subscriptlist2
  184              | subscript subscriptlist2 ','

  185 subscriptlist2: ε
  186               | subscriptlist2 ',' subscript

  187 subscript: test
  188          | test ':' test
  189          | test ':'
  190          | ':' test
  191          | ':'

  192 exprlist: expr exprlist2
  193         | expr exprlist2 ','

  194 exprlist2: ε
  195          | exprlist2 ',' expr

  196 testlist: test testlist1 ','
  197         | test testlist1

  198 testlist1: ε
  199          | testlist1 ',' test

  200 classdef: KEYWORD_CLASS NAME '(' arglist ')' ':' suite
  201         | KEYWORD_CLASS NAME ':' suite
  202         | KEYWORD_CLASS NAME '(' ')' ':' suite

  203 arglist: argument arglist1 ','
  204        | argument arglist1

  205 arglist1: ε
  206         | arglist1 ',' argument

  207 argument: test
  208         | test '=' test
  209         | '*' test
  210         | OP_POWER test


Terminals, with rules where they appear

    $end (0) 0
    '%' <str> (37) 150
    '&' <str> (38) 134
    '(' <str> (40) 8 9 163 179 180 200 202
    ')' <str> (41) 8 9 163 179 180 200 202
    '*' <str> (42) 11 12 22 23 148 209
    '+' <str> (43) 143 154
    ',' <str> (44) 14 18 20 25 27 28 29 52 54 80 83 85 175 178 184 186 193 195 196 199 203 206
    '-' <str> (45) 144 155
    '.' <str> (46) 182
    '/' <str> (47) 149
    ':' <str> (58) 6 7 30 49 50 91 93 95 96 98 99 101 188 189 190 191 200 201 202
    ';' <str> (59) 34 37
    '<' <str> (60) 120
    '=' <str> (61) 16 48 49 208
    '>' <str> (62) 121
    '[' <str> (91) 164 181
    ']' <str> (93) 164 181
    '^' <str> (94) 131
    '|' <str> (124) 128
    '~' <str> (126) 156
    error (256)
    NEWLINE <str> (258) 5 34 35 103
    ENDMARKER <str> (259) 1
    NAME <str> (260) 6 7 30 31 78 80 81 83 165 182 200 201 202
    INDENT <str> (261) 103
    DEDENT <str> (262) 103
    NUMBER <str> (263) 166
    STRING <str> (264) 173 174
    KEYWORD_FALSE <str> (265) 170
    KEYWORD_NONE <str> (266) 168
    KEYWORD_TRUE <str> (267) 169
    KEYWORD_AND <str> (268) 114
    KEYWORD_ASSERT <str> (269) 84 85
    KEYWORD_BREAK <str> (270) 71
    KEYWORD_CLASS <str> (271) 200 201 202
    KEYWORD_CONTINUE <str> (272) 72
    KEYWORD_DEF <str> (273) 6 7
    KEYWORD_ELIF <str> (274) 93
    KEYWORD_ELSE <str> (275) 95 98 101 108
    KEYWORD_FOR <str> (276) 99
    KEYWORD_FROM <str> (277) 77
    KEYWORD_GLOBAL <str> (278) 78
    KEYWORD_IF <str> (279) 91 108
    KEYWORD_IN <str> (280) 99
    KEYWORD_NONLOCAL <str> (281) 81
    KEYWORD_NOT <str> (282) 115
    KEYWORD_OR <str> (283) 111
    KEYWORD_RAISE <str> (284) 75 76 77
    KEYWORD_RETURN <str> (285) 73 74
    KEYWORD_WHILE <str> (286) 96
    OP_POWER <str> (287) 13 14 24 25 28 29 159 210
    OP_INT_DIVIDE_EQUALS <str> (288) 66
    OP_POWER_EQUALS <str> (289) 65
    OP_RIGHT_SHIFT_EQUALS <str> (290) 64
    OP_LEFT_SHIFT_EQUALS <str> (291) 63
    OP_XOR_EQUALS <str> (292) 62
    OP_OR_EQUALS <str> (293) 61
    OP_AND_EQUALS <str> (294) 60
    OP_MOD_EQUALS <str> (295) 59
    OP_DIVIDE_EQUALS <str> (296) 58
    OP_MULTIPLY_EQUALS <str> (297) 57
    OP_MINUS_EQUALS <str> (298) 56
    OP_PLUS_EQUALS <str> (299) 55
    OP_NOT_EQUALS <str> (300) 125
    OP_EQUALS <str> (301) 122
    OP_RIGHT_SHIFT <str> (302) 139
    OP_LEFT_SHIFT <str> (303) 138
    OP_INT_DIVIDE <str> (304) 151
    OP_GREATER_THAN_EQUALS <str> (305) 123
    OP_LESS_THAN_EQUALS <str> (306) 124
    OP_ARROW <str> (307) 7


Nonterminals, with rules where they appear

    $accept (73)
        on left: 0
    file_input <ptr> (74)
        on left: 1
        on right: 0
    file_input1 <ptr> (75)
        on left: 2 3
        on right: 1 3
    file_input2 <ptr> (76)
        on left: 4 5
        on right: 3
    funcdef <ptr> (77)
        on left: 6 7
        on right: 89
    parameters <ptr> (78)
        on left: 8 9
        on right: 6 7
    typedargslist <ptr> (79)
        on left: 10 11 12 13 14
        on right: 9
    typedargslist1 <ptr> (80)
        on left: 15 16
        on right: 10 18
    typedargslist2 <ptr> (81)
        on left: 17 18
        on right: 10 11 12 18 22 23
    typedargslist3 <ptr> (82)
        on left: 19 20
        on right: 10
    typedargslist4 <ptr> (83)
        on left: 21 22 23 24 25
        on right: 20
    typedargslist5 <ptr> (84)
        on left: 26 27 28 29
        on right: 11 12 22 23
    tfpdef <ptr> (85)
        on left: 30 31
        on right: 10 11 13 14 18 22 24 25 28 29
    stmt <ptr> (86)
        on left: 32 33
        on right: 4 104 105
    simple_stmt <ptr> (87)
        on left: 34 35
        on right: 32 102
    simple_stmt2 <ptr> (88)
        on left: 36 37
        on right: 34 35 37
    small_stmt <ptr> (89)
        on left: 38 39 40 41 42
        on right: 34 35 37
    expr_stmt <ptr> (90)
        on left: 43
        on right: 38
    expr_stmt2 <ptr> (91)
        on left: 44 45 46
        on right: 43
    expr_stmt3 <ptr> (92)
        on left: 47 48
        on right: 46 48
    annassign <ptr> (93)
        on left: 49 50
        on right: 44
    testlist_star_expr <ptr> (94)
        on left: 51 52
        on right: 43 48
    testlist_star_expr1 <ptr> (95)
        on left: 53 54
        on right: 51 52 54
    augassign <ptr> (96)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 45
    flow_stmt <ptr> (97)
        on left: 67 68 69 70
        on right: 39
    break_stmt <ptr> (98)
        on left: 71
        on right: 67
    continue_stmt <ptr> (99)
        on left: 72
        on right: 68
    return_stmt <ptr> (100)
        on left: 73 74
        on right: 69
    raise_stmt <ptr> (101)
        on left: 75 76 77
        on right: 70
    global_stmt <ptr> (102)
        on left: 78
        on right: 40
    global_stmt1 <ptr> (103)
        on left: 79 80
        on right: 78 80
    nonlocal_stmt <ptr> (104)
        on left: 81
        on right: 41
    nonlocal_stmt1 <ptr> (105)
        on left: 82 83
        on right: 81 83
    assert_stmt <ptr> (106)
        on left: 84 85
        on right: 42
    compound_stmt <ptr> (107)
        on left: 86 87 88 89 90
        on right: 33
    if_stmt <ptr> (108)
        on left: 91
        on right: 86
    if_stmt1 <ptr> (109)
        on left: 92 93
        on right: 91 93
    if_stmt2 <ptr> (110)
        on left: 94 95
        on right: 91
    while_stmt <ptr> (111)
        on left: 96
        on right: 87
    while_stmt1 <ptr> (112)
        on left: 97 98
        on right: 96
    for_stmt <ptr> (113)
        on left: 99
        on right: 88
    for_stmt1 <ptr> (114)
        on left: 100 101
        on right: 99
    suite <ptr> (115)
        on left: 102 103
        on right: 6 7 91 93 95 96 98 99 101 200 201 202
    suite1 <ptr> (116)
        on left: 104 105
        on right: 103 105
    test <ptr> (117)
        on left: 106
        on right: 7 16 30 49 50 51 52 54 76 77 84 85 91 93 96 108 175 176 178 187 188 189 190 196 197 199 207 208 209 210
    test1 <ptr> (118)
        on left: 107 108
        on right: 106
    or_test <ptr> (119)
        on left: 109
        on right: 106 108
    or_test1 <ptr> (120)
        on left: 110 111
        on right: 109 111
    and_test <ptr> (121)
        on left: 112
        on right: 109 111
    and_test1 <ptr> (122)
        on left: 113 114
        on right: 112 114
    not_test <ptr> (123)
        on left: 115 116
        on right: 112 114 115
    comparison <ptr> (124)
        on left: 117
        on right: 116
    comparison1 <ptr> (125)
        on left: 118 119
        on right: 117 119
    comp_op <ptr> (126)
        on left: 120 121 122 123 124 125
        on right: 119
    expr <ptr> (127)
        on left: 126
        on right: 117 119 192 193 195
    expr1 <ptr> (128)
        on left: 127 128
        on right: 126 128
    xor_expr <ptr> (129)
        on left: 129
        on right: 126 128
    xor_expr1 <ptr> (130)
        on left: 130 131
        on right: 129 131
    and_expr <ptr> (131)
        on left: 132
        on right: 129 131
    and_expr1 <ptr> (132)
        on left: 133 134
        on right: 132 134
    shift_expr <ptr> (133)
        on left: 135
        on right: 132 134
    shift_expr1 <ptr> (134)
        on left: 136 137
        on right: 135 137
    shift_expr2 <ptr> (135)
        on left: 138 139
        on right: 137
    arith_expr <ptr> (136)
        on left: 140
        on right: 135 137
    arith_expr1 <ptr> (137)
        on left: 141 142
        on right: 140 142
    arith_expr2 <ptr> (138)
        on left: 143 144
        on right: 142
    term <ptr> (139)
        on left: 145
        on right: 140 142
    term1 <ptr> (140)
        on left: 146 147
        on right: 145 147
    term2 <ptr> (141)
        on left: 148 149 150 151
        on right: 147
    factor <ptr> (142)
        on left: 152 153
        on right: 145 147 152 159
    factor1 <ptr> (143)
        on left: 154 155 156
        on right: 152
    power <ptr> (144)
        on left: 157
        on right: 153
    power1 <ptr> (145)
        on left: 158 159
        on right: 157
    atom_expr <ptr> (146)
        on left: 160
        on right: 157
    atom_expr1 <ptr> (147)
        on left: 161 162
        on right: 160 162
    atom <ptr> (148)
        on left: 163 164 165 166 167 168 169 170
        on right: 160
    atom1 <ptr> (149)
        on left: 171 172
        on right: 163 164
    atom2 <ptr> (150)
        on left: 173 174
        on right: 167 174
    testlist_comp <ptr> (151)
        on left: 175 176
        on right: 172
    testlist_comp2 <ptr> (152)
        on left: 177 178
        on right: 175 176 178
    trailer <ptr> (153)
        on left: 179 180 181 182
        on right: 162
    subscriptlist <ptr> (154)
        on left: 183 184
        on right: 181
    subscriptlist2 <ptr> (155)
        on left: 185 186
        on right: 183 184 186
    subscript <ptr> (156)
        on left: 187 188 189 190 191
        on right: 183 184 186
    exprlist <ptr> (157)
        on left: 192 193
        on right: 99
    exprlist2 <ptr> (158)
        on left: 194 195
        on right: 192 193 195
    testlist <ptr> (159)
        on left: 196 197
        on right: 45 74 99
    testlist1 <ptr> (160)
        on left: 198 199
        on right: 196 197 199
    classdef <ptr> (161)
        on left: 200 201 202
        on right: 90
    arglist <ptr> (162)
        on left: 203 204
        on right: 179 200
    arglist1 <ptr> (163)
        on left: 205 206
        on right: 203 204 206
    argument <ptr> (164)
        on left: 207 208 209 210
        on right: 203 204 206


State 0

    0 $accept: • file_input $end

    $default  reduce using rule 2 (file_input1)

    file_input   go to state 1
    file_input1  go to state 2


State 1

    0 $accept: file_input • $end

    $end  shift, and go to state 3


State 2

    1 file_input: file_input1 • ENDMARKER
    3 file_input1: file_input1 • file_input2

    NEWLINE           shift, and go to state 4
    ENDMARKER         shift, and go to state 5
    NAME              shift, and go to state 6
    NUMBER            shift, and go to state 7
    STRING            shift, and go to state 8
    KEYWORD_FALSE     shift, and go to state 9
    KEYWORD_NONE      shift, and go to state 10
    KEYWORD_TRUE      shift, and go to state 11
    KEYWORD_ASSERT    shift, and go to state 12
    KEYWORD_BREAK     shift, and go to state 13
    KEYWORD_CLASS     shift, and go to state 14
    KEYWORD_CONTINUE  shift, and go to state 15
    KEYWORD_DEF       shift, and go to state 16
    KEYWORD_FOR       shift, and go to state 17
    KEYWORD_GLOBAL    shift, and go to state 18
    KEYWORD_IF        shift, and go to state 19
    KEYWORD_NONLOCAL  shift, and go to state 20
    KEYWORD_NOT       shift, and go to state 21
    KEYWORD_RAISE     shift, and go to state 22
    KEYWORD_RETURN    shift, and go to state 23
    KEYWORD_WHILE     shift, and go to state 24
    '('               shift, and go to state 25
    '['               shift, and go to state 26
    '+'               shift, and go to state 27
    '-'               shift, and go to state 28
    '~'               shift, and go to state 29

    file_input2         go to state 30
    funcdef             go to state 31
    stmt                go to state 32
    simple_stmt         go to state 33
    small_stmt          go to state 34
    expr_stmt           go to state 35
    testlist_star_expr  go to state 36
    flow_stmt           go to state 37
    break_stmt          go to state 38
    continue_stmt       go to state 39
    return_stmt         go to state 40
    raise_stmt          go to state 41
    global_stmt         go to state 42
    nonlocal_stmt       go to state 43
    assert_stmt         go to state 44
    compound_stmt       go to state 45
    if_stmt             go to state 46
    while_stmt          go to state 47
    for_stmt            go to state 48
    test                go to state 49
    or_test             go to state 50
    and_test            go to state 51
    not_test            go to state 52
    comparison          go to state 53
    expr                go to state 54
    xor_expr            go to state 55
    and_expr            go to state 56
    shift_expr          go to state 57
    arith_expr          go to state 58
    term                go to state 59
    factor              go to state 60
    factor1             go to state 61
    power               go to state 62
    atom_expr           go to state 63
    atom                go to state 64
    atom2               go to state 65
    classdef            go to state 66


State 3

    0 $accept: file_input $end •

    $default  accept


State 4

    5 file_input2: NEWLINE •

    $default  reduce using rule 5 (file_input2)


State 5

    1 file_input: file_input1 ENDMARKER •

    $default  reduce using rule 1 (file_input)


State 6

  165 atom: NAME •

    $default  reduce using rule 165 (atom)


State 7

  166 atom: NUMBER •

    $default  reduce using rule 166 (atom)


State 8

  173 atom2: STRING •

    $default  reduce using rule 173 (atom2)


State 9

  170 atom: KEYWORD_FALSE •

    $default  reduce using rule 170 (atom)


State 10

  168 atom: KEYWORD_NONE •

    $default  reduce using rule 168 (atom)


State 11

  169 atom: KEYWORD_TRUE •

    $default  reduce using rule 169 (atom)


State 12

   84 assert_stmt: KEYWORD_ASSERT • test
   85            | KEYWORD_ASSERT • test ',' test

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    test        go to state 67
    or_test     go to state 50
    and_test    go to state 51
    not_test    go to state 52
    comparison  go to state 53
    expr        go to state 54
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65


State 13

   71 break_stmt: KEYWORD_BREAK •

    $default  reduce using rule 71 (break_stmt)


State 14

  200 classdef: KEYWORD_CLASS • NAME '(' arglist ')' ':' suite
  201         | KEYWORD_CLASS • NAME ':' suite
  202         | KEYWORD_CLASS • NAME '(' ')' ':' suite

    NAME  shift, and go to state 68


State 15

   72 continue_stmt: KEYWORD_CONTINUE •

    $default  reduce using rule 72 (continue_stmt)


State 16

    6 funcdef: KEYWORD_DEF • NAME parameters ':' suite
    7        | KEYWORD_DEF • NAME parameters OP_ARROW test ':' suite

    NAME  shift, and go to state 69


State 17

   99 for_stmt: KEYWORD_FOR • exprlist KEYWORD_IN testlist ':' suite for_stmt1

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    expr        go to state 70
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65
    exprlist    go to state 71


State 18

   78 global_stmt: KEYWORD_GLOBAL • NAME global_stmt1

    NAME  shift, and go to state 72


State 19

   91 if_stmt: KEYWORD_IF • test ':' suite if_stmt1 if_stmt2

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    test        go to state 73
    or_test     go to state 50
    and_test    go to state 51
    not_test    go to state 52
    comparison  go to state 53
    expr        go to state 54
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65


State 20

   81 nonlocal_stmt: KEYWORD_NONLOCAL • NAME nonlocal_stmt1

    NAME  shift, and go to state 74


State 21

  115 not_test: KEYWORD_NOT • not_test

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    not_test    go to state 75
    comparison  go to state 53
    expr        go to state 54
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65


State 22

   75 raise_stmt: KEYWORD_RAISE •
   76           | KEYWORD_RAISE • test
   77           | KEYWORD_RAISE • test KEYWORD_FROM test

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    $default  reduce using rule 75 (raise_stmt)

    test        go to state 76
    or_test     go to state 50
    and_test    go to state 51
    not_test    go to state 52
    comparison  go to state 53
    expr        go to state 54
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65


State 23

   73 return_stmt: KEYWORD_RETURN •
   74            | KEYWORD_RETURN • testlist

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    $default  reduce using rule 73 (return_stmt)

    test        go to state 77
    or_test     go to state 50
    and_test    go to state 51
    not_test    go to state 52
    comparison  go to state 53
    expr        go to state 54
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65
    testlist    go to state 78


State 24

   96 while_stmt: KEYWORD_WHILE • test ':' suite while_stmt1

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    test        go to state 79
    or_test     go to state 50
    and_test    go to state 51
    not_test    go to state 52
    comparison  go to state 53
    expr        go to state 54
    xor_expr    go to state 55
    and_expr    go to state 56
    shift_expr  go to state 57
    arith_expr  go to state 58
    term        go to state 59
    factor      go to state 60
    factor1     go to state 61
    power       go to state 62
    atom_expr   go to state 63
    atom        go to state 64
    atom2       go to state 65


State 25

  163 atom: '(' • atom1 ')'

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    $default  reduce using rule 171 (atom1)

    test           go to state 80
    or_test        go to state 50
    and_test       go to state 51
    not_test       go to state 52
    comparison     go to state 53
    expr           go to state 54
    xor_expr       go to state 55
    and_expr       go to state 56
    shift_expr     go to state 57
    arith_expr     go to state 58
    term           go to state 59
    factor         go to state 60
    factor1        go to state 61
    power          go to state 62
    atom_expr      go to state 63
    atom           go to state 64
    atom1          go to state 81
    atom2          go to state 65
    testlist_comp  go to state 82


State 26

  164 atom: '[' • atom1 ']'

    NAME           shift, and go to state 6
    NUMBER         shift, and go to state 7
    STRING         shift, and go to state 8
    KEYWORD_FALSE  shift, and go to state 9
    KEYWORD_NONE   shift, and go to state 10
    KEYWORD_TRUE   shift, and go to state 11
    KEYWORD_NOT    shift, and go to state 21
    '('            shift, and go to state 25
    '['            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '~'            shift, and go to state 29

    $default  reduce using rule 171 (atom1)

    test           go to state 80
    or_test        go to state 50
    and_test       go to state 51
    not_test       go to state 52
    comparison     go to state 53
    expr           go to state 54
    xor_expr       go to state 55
    and_expr       go to state 56
    shift_expr     go to state 57
    arith_expr     go to state 58
    term           go to state 59
    factor         go to state 60
    factor1        go to state 61
    power          go to state 62
    atom_expr      go to state 63
    atom           go to state 64
    atom1          go to state 83
    atom2          go to state 65
    testlist_comp  go to state 82


State 27

  154 factor1: '+' •

    $default  reduce using rule 154 (factor1)


State 28

  155 factor1: '-' •

    $default  reduce using rule 155 (factor1)


State 29

  156 factor1: '~' •

    $default  reduce using rule 156 (factor1)


State 30

    3 file_input1: file_input1 file_input2 •

    $default  reduce using rule 3 (file_input1)


State 31

   89 compound_stmt: funcdef •

    $default  reduce using rule 89 (compound_stmt)


State 32

    4 file_input2: stmt •

    $default  reduce using rule 4 (file_input2)


State 33

   32 stmt: simple_stmt •

    $default  reduce using rule 32 (stmt)


State 34

   34 simple_stmt: small_stmt • simple_stmt2 ';' NEWLINE
   35            | small_stmt • simple_stmt2 NEWLINE

    $default  reduce using rule 36 (simple_stmt2)

    simple_stmt2  go to state 84


State 35

   38 small_stmt: expr_stmt •

    $default  reduce using rule 38 (small_stmt)


State 36

   43 expr_stmt: testlist_star_expr • expr_stmt2

    OP_INT_DIVIDE_EQUALS   shift, and go to state 85
    OP_POWER_EQUALS        shift, and go to state 86
    OP_RIGHT_SHIFT_EQUALS  shift, and go to state 87
    OP_LEFT_SHIFT_EQUALS   shift, and go to state 88
    OP_XOR_EQUALS          shift, and go to state 89
    OP_OR_EQUALS           shift, and go to state 90
    OP_AND_EQUALS          shift, and go to state 91
    OP_MOD_EQUALS          shift, and go to state 92
    OP_DIVIDE_EQUALS       shift, and go to state 93
    OP_MULTIPLY_EQUALS     shift, and go to state 94
    OP_MINUS_EQUALS        shift, and go to state 95
    OP_PLUS_EQUALS         shift, and go to state 96
    ':'                    shift, and go to state 97
